# ul-packing

./: .gitignore  .npmrc  AGENTS.md  README.md  alembic.ini  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
.codex/skills/beautiful-mermaid/: SKILL.md
.codex/skills/commit-push/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: layout.tsx  page.tsx
app/gears/: page.tsx
app/lists/: page.tsx
app/lists/[id]/: page.tsx
components/: gear-table.tsx
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: app-layout.tsx  gear-sidebar.tsx  item-form-fields.tsx  list-create-form.tsx
frontend/src/lib/: api.ts  constants.ts  format.ts  (+1 more)
lib/: storage.ts  types.ts
notes/: lighterpack-llm-modernization.md  lighterpack-research.md
script/: sampleData.ts
src/ul_packing/: config.py  db.py  gear_inventory.py  main.py  models.py  routes_api.py  routes_web.py  sample_data.py  schemas.py  schemas_api.py  services.py
static/: app.css
templates/: base.html
templates/pages/: list_detail.html  lists_index.html  shared_view.html
templates/partials/: item_form.html  item_table.html  items_section.html  summary_cards.html
tests/: conftest.py
tests/api/: test_api.py  test_sample_data.py
tests/e2e/: test_happy_path.spec.ts
tests/unit/: test_share_token.py  test_summary.py  test_units.py
tests/web/: test_items.py  test_lists.py  test_share.py
(+12 files in other folders)
