[project]
name = "ul-packing"
version = "0.1.0"
description = "UL packing API with FastAPI"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
